--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
@@ -21,6 +21,6 @@ max-height: 100%;
 </style>
 </head>
 <body>
-<img src="https://github.com/Frinkt/loadingScreen/blob/main/овсянск.png" alt="Loading Screen">
+<img src=https://raw.githubusercontent.com/Frinkt/OvsScreen/main/овсянск.png" alt="Loading Screen">
 </body>
 </html>
