--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@ max-height: 100%;
 </style>
 </head>
 <body>
-<img src=https://raw.githubusercontent.com/Frinkt/OvsScreen/main/овсянск.png" alt="Loading Screen">
+<img src=https://github.com/Frinkt/OvsScreen/blob/main/овсянск.png?raw=true" alt="Loading Screen">
 </body>
 </html>
