--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@ max-height: 100%;
 </style>
 </head>
 <body>
-<img src="https://ovsansk.netlify.app/" alt="Loading Screen">
+<img src="https://raw.githubusercontent.com/Frinkt/Ovsanka/main/овсянск.png" alt="Loading Screen">
 </body>
 </html>
