--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ animation: fadeInOut 3s infinite;
 </style>
 </head>
 <body>
-<img src="https://raw.githubusercontent.com/Frinkt/Ovsanka/main/овсянск.png" alt="Loading Screen">
+<img src="https://frinkt.github.io/OvsScreen/" alt="Loading Screen">
 <div class="loading-text">Загрузка сервера...</div>
 <script>
 // Дополнительная задержка (опционально)
